[FIX] Name exploit, names can now only contain letters and numbers.
[FIX] earthquake mod, it's been broken for a long time apparently
[FIX] Chat not appearing in HLSW
[FIX] Arrested timer resetting when other player was arrested
[FIX] Ooc and advert bug where you could say nothing in OOC or advert.
[FIX] Timers for database stuff
[FIX] CPOwnable doors ownable by normal players
[CHANGE] Default shipments are now in addshipments.lua
[CHANGE] Moved complicated code in shared.lua and addshipments.lua to MakeThings.lua
[CHANGE] Changed filename of addshipments.lua to addentities.lua
[CHANGE] People now can't use wanted as an ESP, you will only see someone is wanted if he is in your sight. This way it won't be abused to find players.
[CHANGE] People now drop everything in pocket when they die.
[REMOVE] Simple Prop protection. You have served us well, goodbye.
[REMOVE] RunConsoleCommand override

DarkRP 2.3.7
Updated by: FPtje Falco

[ADD] /demote <reason> People need to specify a reason to demote
[ADD] rp_needwantedforarrest to prevent cops from random arresting
[ADD] /channel and /radio command: Set your radio to a channel and talk through the radio so everyone with the same channel hears you.
[ADD] Hobo's can make zombie sounds by right clicking with the bugbait :P -- idea thanks to GoDNeSS
[ADD] Eating food makes the TF2 nom sound(bad luck if you don't have TF2)
[ADD] Poo and pee mod :D enable with rp_poopeemod 1
[ADD] Anti slobbot server crash
[ADD] Weapon checker for the cops, chief and admin
[ADD] New, more subtle and easier to find easter egg.
[ADD] /wake and /wakeup command :)
[ADD] Gun license, people need a license to be able to pick up guns(toggle with rp_license 1/0)
[ADD] rp_allow<custom team> 1/0
[ADD] Message when trying to spawn a banned prop
[ADD] Pocket swep, store things temporarilly! (rp_pocket to turn on/off)
[ADD] Sleeping players can get hurt
[ADD] rp_voiceradius: Only hear people's voice in your vicinity!(same distance as yell, 550 units)